fixed navbar overlapping

--- a/src/containers/AboutUs/AboutUs.css
+++ b/src/containers/AboutUs/AboutUs.css
@@ -90,7 +90,7 @@
   
   .section-a p {
     margin: 1rem 0;
-    font-size: 25px;
+    font-size: 21px;
     text-align: justify;
   }
   
